<resources>
    <string name="navigation_drawer_open">メニューを開く</string>
    <string name="navigation_drawer_close">メニューを閉じる</string>

    <string name="action_settings">設定</string>
    <string name="downTimeTable"><u>下り時刻表</u></string>
    <string name="upTimeTable"><u>上り時刻表</u></string>


    <string name="delete">削除</string>
    <string name="add">追加</string>
    //メニュー
    <string name="app_name">AOdia</string>
    <string name="menu">メニュー</string>
    <string name="newFile">新規作成</string>
    <string name="openFile">ファイルを開く</string>
    <string name="openHelp">ヘルプを開く</string>
    <string name="options">設定</string>
    <string name="editStation">駅編集</string>
    <string name="editTrainType">種別編集</string>
    <string name="stationTimeTable">駅時刻表</string>
    <string name="diagram">ダイヤグラム</string>

    //時刻表
    <string name="downwardTimeTable">下り時刻表</string>
    <string name="upwardTimeTable">上り時刻表</string>
    <string name="operationNumber">運用番号</string>
    <string name="trainNumber">列車番号</string>
    <string name="trainType">列車種別</string>
    <string name="stationTrack">発着番線</string>
    <string name="startStation">始発</string>
    <string name="endStation">終着</string>
    <string name="remark">備考</string>
    <string name="count">号</string>
    <string name="NoOuterStatationNotice">"路線外始発駅が設定されていません。「駅編集」から路線外始発駅を追加してください"</string>
    <string name="outerStationNull">設定なし</string>

    <string name="UserInputNumberFormatException">数値を入力してください</string>
    <string name="undefined_error">原因不明のエラーが発生しました。</string>
    <string name="eroor_trainNotFound">列車が見つかりません。</string>
    //駅編集
    <string name="downwardTimeTableStyle">下り時刻表形式</string>
    <string name="upwardTimeTableStyle">上り時刻表形式</string>
    <string name="depTime">発時刻</string>
    <string name="ariTime">着時刻</string>
    <string name="track">番線</string>
    <string name="stationSize">駅規模</string>
    <string name="normalStation">一般駅</string>
    <string name="bigStation">主要駅</string>
    <string name="trackOption">番線設定</string>
    <string name="trackName">番線名</string>
    <string name="trackShortName">略称</string>
    <string name="downMain">下り本</string>
    <string name="upMain">上り本</string>
    <string name="addTrack">番線追加</string>
    <string name="outerStationOption">路線外発着駅設定</string>
    <string name="outerStationName">路線外始発終着駅名</string>
    <string name="outerStationShortName">駅略称</string>
    <string name="addOuterStation">路線外始発終着駅追加</string>
    <string name="lineStyleOption">路線形状設定</string>
    <string name="asBrunchStation">当駅を分岐駅にする　　　分岐元：</string>
    //ダイヤグラム
    <string name="trainNameSample">しなの</string>
    <string name="trainNumberSample">2502M</string>
    //ダイヤ編集
    <string name="diagramProperty">ダイヤのプロパティ</string>
    <string name="diagramName">ダイヤ名</string>
    <string name="diagramUpper">ダイヤを一つ上に移動する</string>
    <string name="diagramCopy">このダイヤをコピーする</string>
    <string name="diagramDelete">このダイヤを削除する</string>

    //ファイルオープン
    <string name="FileInTheDevice">スマホ内の\nファイル</string>
    <string name="useDefaultFiler">標準のファイルシステムで選ぶ\n(oudファイルが見つからない方向け)</string>
    <string name="saveDefaultFiler">標準のファイルシステムで保存先を選ぶ</string>
    <string name="OuDiaDatabase">OuDia\nデータベース</string>
    <string name="history">履歴</string>
    <string name="baseDirectory">フォルダ選択</string>
    <string name="searchInsideDirectory">フォルダ内検索\nファイル名・駅名検索</string>
    <string name="makeNewDirectory">新しいフォルダを作る</string>
    <string name="newDirectory">新規フォルダ</string>
    <string name="directoryName">フォルダ名</string>
    <string name="errorFileExist">ここには既にファイルもしくはフォルダが存在します</string>
    <string name="errorDirectoryIsNotEnpty">フォルダを削除する前にフォルダ内を空にしてください</string>

    <string name="SDcard">SDカード</string>
    <string name="inDevice">本体ストレージ</string>
    <string name="UpperFolder">上のフォルダ</string>

    //コメント
    <string name="comment">コメント</string>
    <string name="submit">編集完了</string>
    <string-array
        name="StopTypeSpinner">
        <item>    ：運行無し</item>
        <item>○：停車</item>
        <item>レ：通過</item>
        <item> || ：経由無し</item>
    </string-array>

    //Payment
    <string name="cant_buy">購入できませんでした</string>
    <string name="already_buy">既に購入している</string>
    <string name="buy_thanks">寄付して頂きありがとうございます（カメロング）</string>
    <string name="purchase_error">購入処理でエラーが発生しました。</string>
    <string name="purchase_fail">購入に失敗しました</string>
    <string name="TrainTypeName">種別名：</string>
    <string name="StopSetting">番線設定</string>
    <string name="Number">番号</string>
    <string name="save_to_GoogleDrive">Google Driveに保存する</string>
    <string name="saveExt">保存形式</string>
    <string name="extOud">oud形式</string>
    <string name="extOud2">oud2形式</string>
    <string name="save">保存</string>
    <string name="propaty_lineFile">路線ファイルのプロパティ</string>
    <string name="lineName">路線名</string>
    <string name="disgram_starttime">ダイヤ起点時刻</string>
    <string name="moving_sec_1">秒移動量1</string>
    <string name="moving_sec_2">秒移動量2</string>
    <string name="sendLog_message">AOdia内でエラーが発生した際、開発者にエラーログを送信する事を許可しますか？\n\n\nエラーログは、アプリ改善に役立つため、できるだけ多くの人からデータ提供を受けたいと思います(AOdia開発者：カメロング)\n\nこの項目は設定から変更することができます。</string>
    <string name="accept">許可する</string>
    <string name="not_accept">許可しない</string>
    <string name="routeNamePublic">路線名(公開されます)</string>
    <string name="mailAddress1">メールアドレス(非公開です、ファイル削除の際に必要です)</string>
    <string name="nickNamePublic">ニックネーム(公開されます)</string>
    <string name="keywordPublic">検索キーワード(公開されます)スペース区切りで複数記述できます</string>
    <string name="yearPublic">ダイヤ年代(公開されます）</string>
    <string name="AboutOudiaDatabase">OuDiaデーターベースとは、AOdia製作者が運営するOuDiaファイルの共有・公開サービスです。</string>
    <string name="saveToOudiaDatabase">OuDiaデータベースに保存する</string>
    <string name="AcceptOudiaDatabase">利用規約に同意する</string>
    <string name="TermOfService">利用規約</string>
    <string name="searchRouteFile">路線ファイル検索</string>
    <string name="fileInDevice">スマホ内ファイル</string>
    <string name="ResultOfDatabase">OuDiaデータベース検索結果</string>

</resources>
