<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="300dp"
    android:layout_height="match_parent"
    android:padding="20dp"

    >


    <TextView
        android:id="@+id/textView21"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/searchRouteFile" />

    <TextView
        android:id="@+id/textView22"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/fileInDevice" />

    <ListView
        android:id="@+id/fileListInSystem"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    </ListView>

    <TextView
        android:id="@+id/textView23"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ResultOfDatabase" />

    <ListView
        android:id="@+id/fileListInDataBase"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    </ListView>
</LinearLayout>